test/spec_vectors/simd_i32x4_cmp/fail/module_29.wat
(module (func $i32x4.ge_s-arg-empty (result v128) (i32x4.ge_s)))